--- a/web/src/main/resources/OnlineShopResourceBundle_fr.properties
+++ b/web/src/main/resources/OnlineShopResourceBundle_fr.properties
@@ -4,7 +4,7 @@ signin.btn=Connexion
 signout.btn=Déconnexion
 search.placeholder=Rechercher des produits
 my.profile.lbl=Profil
-change.lang.lbl=Changer
+change.lang.lbl=Changer Langue
 welcome.lbl=Bienvenue
 
 # Sign Up Error messages
@@ -12,6 +12,9 @@ signup.err.msg.email.exists=Un utilisateur avec cet e-mail existe déjà dans le s
 signup.err.msg.repeat.password=Les mots de passe dans les deux champs ne correspondent pas. Veuillez vous assurer que les mots de passe sont identiques dans les deux champs.
 signup.err.msg.special.character=Le mot de passe doit contenir au moins 8 caractères et au moins un caractère spécial.
 signup.err.msg.old.password.wrong=Veuillez utiliser votre mot de passe actuel pour confirmer l'action.
+signup.err.msg.general.error=Une erreur s'est produite lors de la validation du mot de passe. Essayez un autre mot de passe.
+signup.err.msg.common.password=Vous utilisez l'un des mots de passe les plus courants. Veuillez trouver un mot de passe plus sûr.
 signup.err.msg.bad.email=Mauvaise adresse électronique. Vérifier encore une fois.
+signup.err.msg.empty.field=Le champ est vide. Entrez une valeur, s'il vous plaît
 # Orders
-order.created.msg=La commande est créée. Un gestionnaire vous contactera bientôt. Merci !
+order.creating.msg=La commande est créée. Un gestionnaire vous contactera bientôt. Merci !
